@@ -6,62 +6,79 @@ import lombok.RequiredArgsConstructor;
 import org.aspectj.lang.JoinPoint;
 import org.aspectj.lang.ProceedingJoinPoint;
 import org.aspectj.lang.annotation.AfterReturning;
+import org.aspectj.lang.annotation.AfterThrowing;
 import org.aspectj.lang.annotation.Around;
 import org.aspectj.lang.annotation.Aspect;
 import org.aspectj.lang.annotation.Before;
 import org.springframework.cache.CacheManager;
 import org.springframework.stereotype.Component;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
-// @Aspect 어노테이션을 붙여 이 클래스가 Aspect를 나타내는 클래스라는 것을 명시하고 @Component를 붙여 스프링 빈으로 등록
 @Aspect
 @Component
 @RequiredArgsConstructor
 public class CacheAspect {
 
+    private static final String DELIMITER = ",";
+
     private final CacheManager cacheManager;
 
-    @Before("execution(* com.example.cachepractice.ui.DataController.getItems(..)) && args(idRequest)")
-    public void sortAndRemoveDuplicates(IdRequest idRequest) {
-        List<Long> distinctSortedIds = idRequest.getIds().stream()
-                .distinct() // 중복 제거
-                .sorted()   // 정렬
-                .collect(Collectors.toList());
+    @Around("execution(* com.example.cachepractice.ui.DataController.getItems(..)) && args(idString)")
+    public Object sortAndRemoveDuplicates(ProceedingJoinPoint joinPoint, String idString) throws Throwable {
+        List<Long> sortedIds = Arrays.stream(idString.split(DELIMITER))
+                .map(Long::valueOf)
+                .distinct()
+                .sorted()
+                .toList();
 
-        idRequest.getIds().clear();
-        idRequest.getIds().addAll(distinctSortedIds);
+        // 정렬된 리스트를 새 인자로 전달
+        String sortedIdString = sortedIds.stream()
+                .map(String::valueOf)
+                .collect(Collectors.joining(DELIMITER));
+
+        return joinPoint.proceed(new Object[]{sortedIdString});
     }
 
     @Around("execution(* com.example.cachepractice.application.DataService.getDataByIds(..)) && args(ids)")
     public Object cacheableAdvice(ProceedingJoinPoint joinPoint, List<Long> ids) throws Throwable {
-        // 캐시 키 생성 로직
         List<MockData> cachedData = ids.stream()
-                .map(id -> cacheManager.getCache("data").get(id, MockData.class))
-                .filter(data -> data != null)
+                .map(id -> Objects.requireNonNull(cacheManager.getCache("data")).get(id, MockData.class))
+                .filter(Objects::nonNull)
                 .collect(Collectors.toList());
 
-        // 캐시되지 않은 ID 찾기
         List<Long> cachedIds = cachedData.stream()
                 .map(MockData::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Long> missingIds = ids.stream()
                 .filter(id -> !cachedIds.contains(id))
                 .collect(Collectors.toList());
 
         if (!missingIds.isEmpty()) {
-            // 캐시에 데이터가 없으면 원본 메소드 실행
             List<MockData> dbData = (List<MockData>) joinPoint.proceed(new Object[]{missingIds});
 
-            // 결과를 캐시에 저장
             dbData.forEach(data -> cacheManager.getCache("data").put(data.getId(), data));
-
             cachedData.addAll(dbData);
         }
 
         return cachedData;
     }
 
+    @AfterReturning(pointcut = "execution(* com.example.cachepractice.application.DataService.getDataById(..)) && args(id)", returning = "result", argNames = "joinPoint,id,result")
+    public void cacheAfterReturning(JoinPoint joinPoint, Long id, MockData result) {
+        if (result != null) {
+            cacheManager.getCache("data").put(id, result);
+        }
+    }
+
+
+    @AfterThrowing(pointcut = "execution(* com.example.cachepractice.application.DataService.getDataById(..)) && args(id)", throwing = "ex")
+    public void cacheAfterThrowing(JoinPoint joinPoint, Long id, Throwable ex) {
+        cacheManager.getCache("data").evict(id);
+    }
 }
+
